Replace new Integer with Integer.valueOf to save a bit of memory.